# lpowerprobe

./: Makefile  Makefile.am  Makefile.android  Makefile.mic  Makefile.rules  ProjectHome.md  README  README.md  autogen.sh  build_mic.sh  configure.ac  install.sh  install_mic.sh  lPowerProbe.doxy
doc/: Doxyfile.in  Makefile.am
empty/: Makefile  Makefile.am  empty.s
probes/: Makefile.am
probes/energy_snb_msr/: Makefile  energy_msr_snb.c  msr_snb.h
probes/energy_snb_msr/includes/: error.h  msr.c  msr.h  msr_types.h  registers.h  types.h
probes/libenergymic/: Makefile  Makefile.am  mic_energy.c
probes/libenergymsr/: Makefile  Makefile.am  libenergymsr.c  libenergymsr.h
probes/libenergyserver/: Makefile  libenergyserver.c  libenergyserver.h
probes/libenergyserver/server/: Makefile  energyserver.c  energyserver.h
probes/libenergyyoko/: Makefile  Makefile.am  libenergyyoko.c  libenergyyoko.h  yokosrv.c  yokosrv.h
probes/libtimer/: Makefile  Makefile.am  timer.c
probes/libtimerarm/: Makefile  barrier.c  barrier.h  threadData.h  threadFct.c  threadFct.h  timer.c  timer.h  timer2.c  timer2.h
probes/libwallclock/: Makefile  Makefile.am  libwallclock.c  libwallclock.h
probes/mic_energy/: .mic_energy.c.swo  Makefile  mic_energy.c
probes/pfmcounters/: Makefile  Makefile.am  pfmcounters.c  pfmcounters.h  pfmcounters.ini
probes/pfmcounters/inih/cpp/: INIReader.cpp
probes/timer/: Makefile
probes/wallclock/: Makefile  wallclock.c  wallclock.h
probes/yoko_energy/: Makefile  libyoko_energy.c  yokosrv.c  yokosrv.h
scripts/: Makefile.am  config.sh  deployLPP.sh  lppMPIkiller.sh  mpirunLPP.sh
scripts/MPI_preload/: .Makefile.swp  .liblppMPInotifier.c.swp  Makefile  Makefile.am  liblppMPInotifier.c  preloader.sh
src/: CPUUtils.cpp  CPUUtils.hpp  DaemonExperimentation.cpp  DaemonExperimentation.hpp  DaemonRunner.cpp  DaemonRunner.hpp  Experimentation.cpp  Experimentation.hpp  ExperimentationFactory.cpp  ExperimentationFactory.hpp  ExperimentationResults.cpp  ExperimentationResults.hpp  ExperimentationResultsWriter.cpp  ExperimentationResultsWriter.hpp  ExperimentationThreadArgs.hpp  InvalidProbeVersionException.hpp  Kernel.cpp  Kernel.hpp  KernelCompiler.cpp  KernelCompiler.hpp  KernelExperimentation.cpp  KernelExperimentation.hpp  KernelRunner.cpp  KernelRunner.hpp  Makefile.am  Options.cpp  Options.hpp  Probe.cpp  Probe.hpp  ProbeData.cpp  ProbeData.hpp  ProbeDataCollector.cpp  ProbeDataCollector.hpp  ProbeInitialisationException.hpp  ProbeLoader.cpp  ProbeLoader.hpp  ProbeLoadingException.hpp  ProbeV1.cpp  ProbeV1.hpp  ProbeV2.cpp  (+12 more)
src/Datas/: ExperimentationResults.cpp  ExperimentationResults.hpp  ExperimentationResultsWriter.cpp  ProbeData.cpp  ProbeData.hpp  ProbeDataCollector.hpp  RunData.cpp  RunData.hpp
src/Experimentation/: DaemonExperimentation.cpp  DaemonRunner.cpp  Experimentation.cpp  Experimentation.hpp  ExperimentationFactory.cpp  ExperimentationThreadArgs.hpp  KernelCompiler.cpp  KernelExperimentation.cpp  KernelExperimentation.hpp  KernelRunner.cpp  ProgramExperimentation.cpp  ProgramRunner.hpp  Runner.cpp  Runner.hpp
src/Probes/: InvalidProbeVersionException.hpp  Probe.hpp  ProbeInitialisationException.hpp  ProbeLoader.cpp  ProbeLoader.hpp  ProbeLoadingException.hpp  ProbeV1.hpp  ProbeV2.hpp
tests/: run_microlaunch_tests.sh  run_tests.sh
tests/alt_cpu_mem/: Makefile  main.c  test
tests/kernel_00070/: test.s
tests/kernel_add/: test.s
